pkglibexec_PROGRAMS = osu_alltoall osu_bcast osu_bibw osu_bw osu_latency osu_mbw_mr osu_multi_lat

if MPI2_LIBRARY
    pkglibexec_PROGRAMS += osu_acc_latency osu_get_bw osu_get_latency osu_latency_mt osu_put_bibw osu_put_bw osu_put_latency osu_passive_put_latency osu_passive_put_bw osu_passive_get_latency osu_passive_get_bw osu_passive_acc_latency
endif

EXTRA_DIST = README CHANGES
